# comparison_of_multiplications

./: CMakeLists.txt  comparation.cpp  config.h  main.cpp
gpu/: MultiplicationMatricesGPU.cpp  MultiplicationMatricesGPU.h
kernels/: kernel.cl
matrices/: MatrixOperations.cpp  MatrixOperations.h
